# RayMarching

./: .gitignore  CMakeLists.txt  README.md
compatibility-tests/: CMakeLists.txt  setup.sh  shaded-triangle.cu  simple-triangle.cu
scenes/: animation1.lua  animation2.lua  animation3.lua  animation4.lua  animation5.lua  bare.lua  boxes.lua  hello.lua  roughness_test.lua  wobble.lua
src/: camera.cuh  cameraController.cuh  cudaMathUtils.cuh  cudaTexture.cu  cudaTexture.h  displayRect.cpp  displayRect.h  fpsCounter.cuh  luaApi.cuh  main.cu  matrix.cuh  openGL.h  rayIntersection.cuh  scene.cuh  sceneMarcher.cuh  simple.cu
tools/: build-debug.sh  config-win.sh
